# hanz-web

./: .dockerignore  .gitignore  .mise.toml  CHANGELOG.md  Dockerfile  Dockerfile.prod  Makefile  Pipfile  Procfile  bun.lockb  dev.Dockerfile  docker-compose.dev.yml  entrypoint.sh  fly.toml  manage.py  package.json  prod.Dockerfile  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: django-ci.yml  docker-CI.yml  docker-ci-cd.yml  release-please.yml
assets/css/: input.css  output.css
base/: blocks.py  models.py
base/migrations/: 0001_initial.py  0002_formpage_formfield.py  0003_googletagmanagersettings.py  0004_delete_googletagmanagersettings.py
blog/: models.py
blog/migrations/: 0001_initial.py  0002_blogindexpage_delete_blogpage.py  0003_blogpage.py
deployment/compose/: docker-compose.yml
deployment/nginx/: nginx.conf  vhost.conf  vhost.dev.conf
deployment/swarm/: docker-swarm.yml
hanz/: celery.py  urls.py  wsgi.py
hanz/settings/: base.py  dev.py  production.py
hanz/tasks/: __init__.py  db_backup.py
hanz/templates/: base.html
home/: models.py
home/migrations/: 0003_homepage_body.py  0004_homepage_canonical_url_homepage_og_image_and_more.py  0005_homepage_hero_cta_homepage_hero_cta_link_and_more.py  0006_remove_homepage_hero_cta_and_more.py
home/templates/home/: home_page.html
project/: blocks.py  models.py
project/migrations/: 0001_initial.py
static/CACHE/: manifest.json
static/CACHE/css/: output.1d5dbf44ff81.css  output.1d5dbf44ff81.css.br  output.2c3c3bfed521.css  (+2 more)
static/src/: output.css
templates/: base.html  index.html
templates/base/: form_page.html  form_page_landing.html
templates/home/: home_page.html
templates/includes/: footer.html  header.html
templates/project/: project_page.html
(+5 files in other folders)
