[tool.poetry]
name = "hanz-web"
version = "0.16.0"
description = ""
authors = ["Hanz <haniel56@zoho.eu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "<5.1,>=4.2"
wagtail = "<6.3,>=6.0"
psycopg2-binary = "*"
django-compressor = "<5,>=4.5"
wagtail-seo = "<3,>=2.5"
wagtail-ai = "<3,>=2.0"
dj-database-url = "*"
django-crispy-forms = "*"
crispy-tailwind = "*"
wagtail-cache = "<3,>=2.5"
redis = {extras = ["hiredis"], version = "*"}
django-dbbackup = "<5,>=4.1"
django-storages = {extras = ["boto3"], version = "==1.14"}
django-anymail = "<12,>=11.0"
wagtail-storages = "<2,>=1.1"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
