[tool.poetry]
name = "hanz-web"
version = "0.20.0"
description = ""
authors = ["Hanz <haniel56@zoho.eu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "<5.2,>=4.2"
wagtail = "<6.5,>=6.4"
psycopg2-binary = "^2.9.9"
django-compressor = "<5,>=4.5"
wagtail-seo = "<3,>=2.5"
wagtail-ai = "<3,>=2.0"
dj-database-url = "*"
django-crispy-forms = "*"
crispy-tailwind = "*"
wagtail-cache = "<3,>=2.5"
redis = {extras = ["hiredis"], version = "*"}
django-dbbackup = "<5,>=4.1"
django-storages = {extras = ["boto3"], version = "==1.14"}
django-anymail = "<12,>=11.0"
wagtail-storages = "<2,>=1.1"
celery = "^5.4.0"
django-celery-beat = "^2.6.0"
django-plausible = "^0.5.0"
whitenoise = "^6.7.0"
djhtml = "^3.0.7"
django-types = "^0.19.1"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
